[gd_scene load_steps=9 format=2]

[ext_resource path="res://TowerRelated/AbstractTower.tscn" type="PackedScene" id=1]
[ext_resource path="res://TowerRelated/Color_Violet/Ping/Ping.gd" type="Script" id=2]
[ext_resource path="res://TowerRelated/Color_Violet/Ping/Ping_BottomHalf.png" type="Texture" id=3]
[ext_resource path="res://TowerRelated/Color_Violet/Ping/Ping_TopHalf.png" type="Texture" id=4]
[ext_resource path="res://TowerRelated/Color_Violet/Ping/Ping_Eye_Sleep.png" type="Texture" id=5]
[ext_resource path="res://TowerRelated/Color_Violet/Ping/Ping_BottomHalf_NoHealth.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Omni",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Omni_NoHealth",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9.82813, 15.3271 )

[node name="Ping" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TowerBase" parent="." index="0"]
position = Vector2( 0, -2 )

[node name="BaseSprites" parent="TowerBase/KnockUpLayer" index="0"]
frames = SubResource( 1 )
animation = "Omni_NoHealth"
offset = Vector2( -0.5, 0 )

[node name="TopHalf" type="Sprite" parent="TowerBase/KnockUpLayer" index="1"]
position = Vector2( -0.5, -24 )
texture = ExtResource( 4 )

[node name="PingEye" type="Sprite" parent="TowerBase/KnockUpLayer" index="2"]
position = Vector2( -0.5, -42 )
texture = ExtResource( 5 )

[node name="CollisionShape" parent="." index="1"]
position = Vector2( 0, -9 )
shape = SubResource( 2 )

[node name="IngredientDeclinePic" parent="." index="4"]
visible = false
